nav and contact fixes, javascript space background with stars that flicker and move

--- a/css/battleIwoJima.css
+++ b/css/battleIwoJima.css
@@ -3,107 +3,13 @@ body{
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    background-color: grey;
+    background-color: black;
 }
 
-/* Title container */
-.title-container{
-    background-color: black;
-    width: 100%;
-    min-width: 270px;
-    height: 50px;
-    margin: 0px;
-    color: white;
-    font-size: 25px;
-    border-bottom: 2px solid white;
-    display:flex;
-    align-items: center; 
-}
-.title-container h1{
-    font-size: clamp(8px,2vw,25px);
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    padding: 10px;
-    margin: 0; 
-    margin-left: auto;
-    margin-right: 50%;
-    translate: 50%;
-    white-space: nowrap;
-    overflow: hidden;
-}
-.title-container .dropdown{
-    font-size: clamp(10px,1vw,15px);
-    height: 50px;
-}
-.dropdown{
-    float:left;
-    white-space: nowrap;
-}
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-.title-container span.label{
-    color: white;
-    display: inline-block;
-    line-height: 50px;
-    text-align: center;
-    vertical-align:middle;
-    font-size: clamp(10px,2vw,25px);
-    border-radius: 10px;
-    border: 2px solid white;
-    white-space: nowrap;
-    overflow: hidden;
-    
-} 
-.dropdown-content {
-    display: none;
+canvas {
+    display: block;
     position: absolute;
-    word-break: 50px;
-    line-height: 50px;
-    font-size: clamp(10px,1vw,15px);
-    background-color: black;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgb(253, 253, 253);
-    z-index: 1;
-    border: 1px solid white;
-    margin-top: 50px;
-    margin-left: 2px;
-}
-.dp-text{
-    text-align: center;
-    outline: white solid 1px;
-    width: 100%;
-    position: relative;
-}
-.dp-text p{
-    margin: 0px;
-}
-.op-1{
-    position: relative;
-}
-.selector{
-    position: relative;
-    display: inline-block;
-}
-.title-container span.label:hover{
-    background-color: green;
-}
-.selector:hover .dropdown-content {
-    display:block;
-}
-.dropdown-content .dp-text:hover{
-    background-color: green;
-    width: 110%;   
-}
-.selector button.label:focus{
-    color: red;
-}
-.dropdown-content a{
-    color: white;
-    width: 100%;
-    height: 100%;
+    z-index: -1;
 }
 
 /* Main container */
@@ -114,7 +20,8 @@ body{
     align-items: center;
     text-align: center;
     min-width: 270px;
-    margin: 40px 20px 0px 20px;
+    margin: 40px 20px 40px 20px;
+    position: relative;
 }
 
 .main-container .box{
@@ -135,7 +42,7 @@ body{
     width: 100%;
     margin-bottom: 50px;
     border-radius: 5px;
-    outline: black solid 2px;
+    outline: white solid 2px;
 }
 
 /* description*/
@@ -163,51 +70,6 @@ span.desc-sub{
 }
 .description{
     font-size: clamp(10px,2vw,15px);
-}
-
-/* Contact section */
-.footer-container{
-    position: relative;
-    background-color: grey;
-    background-image: url("../images/m.jpg");
-    background-position:center;
-    background-size: cover;
-    width: 100%;
-    height: 200px;
-    margin: 0px;
-    text-align: center;
-    border-top: 2px solid white;
-    min-width: 270px;
-}
-.contacts{
-    width: 100%;
-    height: 100%;
-    display: inline-block;
-    background-color: rgba(128, 128, 128, 0.700);
-    position: relative;
-}
-.contacts h2{
-    color: white;
-    text-decoration:underline;
-    font-size: clamp(15px,2vw,25px);
-}
-.contacts ul{
-    list-style: none;
-    padding: 0px;
-    position: absolute;
-
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -80%);
-    transform: translate(-50%, -80%);
-}
-.contacts li{
-    color:white;
-    font-size: clamp(12px,1vw,16px);
-    white-space: nowrap;
-}
-.contacts a:hover{
-    color: blue;
 }
 
 /* Media tags should always be at the bottom of file*/
