--- a/css/project1.css
+++ b/css/project1.css
@@ -1,5 +1,17 @@
 body{
+    background-color: green;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.message{
+    z-index: 1;
     background-image: url("../images/Maintenance.png");
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat:no-repeat;
+    position: absolute;
+    width: 50vw;
+    height: 50vh;
+    translate: 50% 50%;
 }
